--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.1.0'
 	implementation 'androidx.core:core-ktx:1.1.0'
 	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-	implementation 'com.google.android.material:material:1.1.0-alpha10'
+	implementation 'com.google.android.material:material:1.1.0-beta01'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 	implementation 'org.threeten:threetenbp:1.4.0'
 	implementation 'com.google.firebase:firebase-analytics:17.2.0'
