Keep receiving location in background in Android 10.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="org.ddosolitary.greendragonfly">
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -48,6 +49,8 @@
 		<service
 			android:name=".RecordingService"
 			android:enabled="true"
-			android:exported="false" />
+			android:exported="false"
+			android:foregroundServiceType="location"
+			tools:ignore="UnusedAttribute" />
 	</application>
 </manifest>
