--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,15 @@ dependencies {
 	implementation 'com.google.android.material:material:1.1.0-beta01'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 	implementation 'org.threeten:threetenbp:1.4.0'
-	implementation 'com.google.firebase:firebase-analytics:17.2.0'
-	implementation 'com.google.firebase:firebase-perf:19.0.0'
+	implementation 'com.google.firebase:firebase-analytics:17.2.1'
+	implementation 'com.google.firebase:firebase-perf:19.0.1'
 	implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
 	def lifecycle_version = "2.1.0"
 	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
-	def room_version = "2.2.0-rc01"
+	def room_version = "2.2.1"
 	implementation "androidx.room:room-runtime:$room_version"
 	kapt "androidx.room:room-compiler:$room_version"
 	implementation "androidx.room:room-ktx:$room_version"
