--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
 	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
+	def preference_version = "1.1.0"
+	implementation "androidx.preference:preference:$preference_version"
+	implementation "androidx.preference:preference-ktx:$preference_version"
+
 	def room_version = "2.2.1"
 	implementation "androidx.room:room-runtime:$room_version"
 	kapt "androidx.room:room-compiler:$room_version"
