--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,5 +7,6 @@ jobs:
       - run: |
           sudo $ANDROID_SDK_ROOT/../tools/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "build-tools;29.0.2" "platforms;android-29"
           ./gradlew assembledebug
+          git fetch --unshallow
           curl -fsS -T app/build/outputs/apk/debug/app-debug.apk -u ddosolitary:${{ secrets.BINTRAY_KEY }} https://api.bintray.com/content/ddosolitary/dev-releases/default/default/GreenDragonfly/GreenDragonfly-r$(git rev-list --count HEAD).apk
           curl -fsS -X POST -u ddosolitary:${{ secrets.BINTRAY_KEY }} https://api.bintray.com/content/ddosolitary/dev-releases/default/default/publish
