--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlinx-serialization'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.firebase-perf'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
 	compileSdkVersion 29
-	buildToolsVersion "29.0.2"
+	buildToolsVersion "29.0.3"
 	defaultConfig {
 		applicationId "org.ddosolitary.greendragonfly"
 		minSdkVersion 23
@@ -24,40 +24,48 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
+	compileOptions {
+		sourceCompatibility = 1.8
+		targetCompatibility = 1.8
+	}
+	kotlinOptions {
+		jvmTarget = 1.8
+	}
 }
 
 dependencies {
-	implementation files('libs/BaiduLBS_Android.jar')
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.13.0'
-	implementation 'androidx.appcompat:appcompat:1.1.0'
-	implementation 'androidx.core:core-ktx:1.1.0'
+	implementation files('libs/BaiduLBS_AndroidSDK_Lib_GP.aar')
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0'
+	implementation 'androidx.appcompat:appcompat:1.2.0'
+	implementation 'androidx.core:core-ktx:1.3.1'
 	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-	implementation 'com.google.android.material:material:1.1.0-beta02'
+	implementation 'com.google.android.material:material:1.2.0'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
-	implementation 'org.threeten:threetenbp:1.4.0'
-	implementation 'com.google.firebase:firebase-analytics:17.2.1'
-	implementation 'com.google.firebase:firebase-perf:19.0.4'
-	implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+	implementation 'org.threeten:threetenbp:1.4.4'
+	implementation 'com.google.firebase:firebase-analytics:17.4.4'
+	implementation 'com.google.firebase:firebase-perf:19.0.8'
+	implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
 
-	def lifecycle_version = "2.1.0"
+
+	def lifecycle_version = "2.2.0"
 	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
-	def preference_version = "1.1.0"
+	def preference_version = "1.1.1"
 	implementation "androidx.preference:preference:$preference_version"
 	implementation "androidx.preference:preference-ktx:$preference_version"
 
-	def room_version = "2.2.3"
+	def room_version = "2.2.5"
 	implementation "androidx.room:room-runtime:$room_version"
 	kapt "androidx.room:room-compiler:$room_version"
 	implementation "androidx.room:room-ktx:$room_version"
 
-	def coroutines_version = "1.3.2"
+	def coroutines_version = "1.3.8"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-	def fuel_version = "2.2.1"
+	def fuel_version = "2.2.3"
 	implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
 	implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
 }
