--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,16 @@
 buildscript {
-	ext.kotlin_version = '1.3.61'
+	ext.kotlin_version = '1.3.72'
 	repositories {
 		google()
 		jcenter()
-		maven { url 'https://maven.fabric.io/public' }
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:3.5.3'
+		classpath 'com.android.tools.build:gradle:4.0.1'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 		classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 		classpath 'com.google.gms:google-services:4.3.3'
 		classpath 'com.google.firebase:perf-plugin:1.3.1'
-		classpath 'io.fabric.tools:gradle:1.31.1'
+		classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
 	}
 }
 allprojects {
