--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,11 @@ android {
 dependencies {
 	implementation files('libs/BaiduLBS_AndroidSDK_Lib_GP.aar')
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0'
+	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0-RC2'
 	implementation 'androidx.appcompat:appcompat:1.2.0'
 	implementation 'androidx.core:core-ktx:1.3.1'
-	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-	implementation 'com.google.android.material:material:1.2.0'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+	implementation 'com.google.android.material:material:1.2.1'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 	implementation 'org.threeten:threetenbp:1.4.4'
 	implementation 'com.google.firebase:firebase-analytics:17.4.4'
