--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.firebase-perf'
-apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: "com.bugsnag.android.gradle"
 
 android {
 	compileSdkVersion 30
@@ -43,10 +41,7 @@ dependencies {
 	implementation 'com.google.android.material:material:1.2.1'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 	implementation 'org.threeten:threetenbp:1.4.4'
-	implementation 'com.google.firebase:firebase-analytics:17.4.4'
-	implementation 'com.google.firebase:firebase-perf:19.0.8'
-	implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
-
+	implementation "com.bugsnag:bugsnag-android:5.2.0"
 
 	def lifecycle_version = "2.2.0"
 	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
