--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
 	implementation 'com.google.android.material:material:1.2.1'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 	implementation 'org.threeten:threetenbp:1.4.4'
-	implementation "com.bugsnag:bugsnag-android:5.2.0"
+	implementation 'com.bugsnag:bugsnag-android:5.2.0'
+	implementation 'androidx.webkit:webkit:1.3.0'
 
 	def lifecycle_version = "2.2.0"
 	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
