--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
 	kotlinOptions {
 		jvmTarget = 1.8
 	}
+	defaultConfig {
+		javaCompileOptions {
+			annotationProcessorOptions {
+				arguments += ['room.schemaLocation': "$projectDir/schemas".toString()]
+			}
+		}
+	}
 }
 
 dependencies {
@@ -43,6 +50,7 @@ dependencies {
 	implementation 'org.threeten:threetenbp:1.4.4'
 	implementation 'com.bugsnag:bugsnag-android:5.2.0'
 	implementation 'androidx.webkit:webkit:1.3.0'
+	debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
 	def lifecycle_version = "2.2.0"
 	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
