--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.2.0'
 	implementation 'androidx.core:core-ktx:1.3.1'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-	implementation 'com.google.android.material:material:1.2.1'
+	implementation 'com.google.android.material:material:1.3.0-alpha03'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 	implementation 'com.bugsnag:bugsnag-android:5.2.0'
 	implementation 'androidx.webkit:webkit:1.3.0'
