--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
 apply plugin: 'kotlin-kapt'
 apply plugin: "com.bugsnag.android.gradle"
 
 android {
 	compileSdkVersion 30
-	buildToolsVersion "30.0.2"
+	buildToolsVersion "30.0.3"
 	defaultConfig {
 		applicationId "org.ddosolitary.greendragonfly"
 		minSdkVersion 23
@@ -40,18 +39,18 @@ android {
 }
 
 dependencies {
-	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.0'
+	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
 
 	implementation files('libs/BaiduLBS_AndroidSDK_Lib_GP.aar')
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0-RC2'
+	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1'
 	implementation 'androidx.appcompat:appcompat:1.2.0'
 	implementation 'androidx.core:core-ktx:1.3.2'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-	implementation 'com.google.android.material:material:1.3.0-alpha03'
+	implementation 'com.google.android.material:material:1.3.0-beta01'
 	implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
-	implementation 'com.bugsnag:bugsnag-android:5.2.0'
-	implementation 'androidx.webkit:webkit:1.3.0'
+	implementation 'com.bugsnag:bugsnag-android:5.4.0'
+	implementation 'androidx.webkit:webkit:1.4.0'
 	debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
 	def lifecycle_version = "2.2.0"
@@ -61,16 +60,16 @@ dependencies {
 	def preference_version = "1.1.1"
 	implementation "androidx.preference:preference-ktx:$preference_version"
 
-	def room_version = "2.2.5"
+	def room_version = "2.2.6"
 	implementation "androidx.room:room-runtime:$room_version"
 	kapt "androidx.room:room-compiler:$room_version"
 	implementation "androidx.room:room-ktx:$room_version"
 
-	def coroutines_version = "1.3.8"
+	def coroutines_version = "1.4.2"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-	def fuel_version = "2.2.3"
+	def fuel_version = "2.3.1"
 	implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
 	implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
 }
