--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 	repositories {
 		google()
 		jcenter()
+		mavenCentral()
 	}
 	dependencies {
 		classpath 'com.android.tools.build:gradle:4.1.1'
@@ -15,6 +16,7 @@ allprojects {
 	repositories {
 		google()
 		jcenter()
+		mavenCentral()
 	}
 }
 task clean(type: Delete) {
