fix room.schemaLocation config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ android {
 		jvmTarget = 1.8
 	}
 	defaultConfig {
-		javaCompileOptions {
-			annotationProcessorOptions {
-				arguments += ['room.schemaLocation': "$projectDir/schemas".toString()]
+		kapt {
+			arguments {
+				arg('room.schemaLocation', "$projectDir/schemas")
 			}
 		}
 	}
