--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
 	ext.kotlin_version = '1.5.20'
 	repositories {
 		google()
-		jcenter()
 		mavenCentral()
 	}
 	dependencies {
@@ -15,7 +14,7 @@ buildscript {
 allprojects {
 	repositories {
 		google()
-		jcenter()
+		jcenter() // for debug-db
 		mavenCentral()
 	}
 }
