--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "com.bugsnag.android.gradle"
 
 android {
-	compileSdkVersion 31
-	buildToolsVersion "31.0.0"
+	compileSdkVersion 32
+	buildToolsVersion "32.0.0"
 	defaultConfig {
 		applicationId "org.ddosolitary.greendragonfly"
 		minSdkVersion 23
@@ -43,16 +43,16 @@ dependencies {
 
 	implementation files('libs/BaiduLBS_AndroidSDK_Lib.aar')
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
-	implementation 'androidx.appcompat:appcompat:1.3.1'
-	implementation 'androidx.core:core-ktx:1.6.0'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1'
+	implementation 'androidx.appcompat:appcompat:1.4.0'
+	implementation 'androidx.core:core-ktx:1.7.0'
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 	implementation 'com.google.android.material:material:1.4.0'
-	implementation 'com.bugsnag:bugsnag-android:5.14.0'
+	implementation 'com.bugsnag:bugsnag-android:5.17.0'
 	implementation 'androidx.webkit:webkit:1.4.0'
-	debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+	debugImplementation 'com.github.amitshekhariitbhu.Android-Debug-Database:debug-db:v1.0.6'
 
-	def lifecycle_version = "2.3.1"
+	def lifecycle_version = "2.4.0"
 	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
 	def preference_version = "1.1.1"
