--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-	ext.kotlin_version = '1.5.31'
+	ext.kotlin_version = '1.6.0'
 	repositories {
 		google()
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:7.0.2'
+		classpath 'com.android.tools.build:gradle:7.0.4'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 		classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 		classpath 'com.bugsnag:bugsnag-android-gradle-plugin:7.1.0'
@@ -14,8 +14,8 @@ buildscript {
 allprojects {
 	repositories {
 		google()
-		jcenter() // for debug-db
 		mavenCentral()
+		maven { url 'https://jitpack.io' }
 	}
 }
 task clean(type: Delete) {
