--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,6 @@ android {
 dependencies {
 	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
-	implementation files('libs/BaiduLBS_AndroidSDK_Lib.aar')
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1'
 	implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -70,4 +69,9 @@ dependencies {
 	def fuel_version = "2.3.1"
 	implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
 	implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
+
+	def lbsyun_version = "7.4.2"
+	implementation "com.baidu.lbsyun:BaiduMapSDK_Map:$lbsyun_version"
+	implementation "com.baidu.lbsyun:BaiduMapSDK_Util:$lbsyun_version"
+	implementation 'com.baidu.lbsyun:BaiduMapSDK_Location:9.1.8'
 }
